[package]
name = "json-arr-shuffle"
version = "0.0.1"
description = "Shuffle items in a JSON array"
license-file = "LICENSE"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
repository = "https://github.com/Phrohdoh/json-arr-shuffle-rs"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
rand = "^0.6"
